[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/WeaponScripts/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Particles/smoke_06.png" type="Texture" id=2]

[sub_resource type="Curve" id=4]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.152174, 27.1591 ), 0.0, 0.0, 0, 0, Vector2( 0.251553, 82.8409 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.0181818 ), 0.0, 0.0, 0, 0, Vector2( 0.177019, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.57764, 0.572727 ), -2.45513, -2.45513, 0, 0, Vector2( 0.993789, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.217391, 0.240803, 0.491639, 0.505017, 0.675585, 0.725753, 1 )
colors = PoolColorArray( 0.92218, 1, 0.00390625, 0.995811, 0.898831, 0.874976, 0.0174742, 0.993499, 0.792157, 0.298039, 0.0784314, 1, 0.79084, 0.296741, 0.0802258, 0.982809, 1, 0, 0, 1, 1, 0, 0, 1, 0.145098, 0.145098, 0.145098, 1, 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="CircleShape2D" id=1]
radius = 41.0122

[node name="Explosion" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )
atk = 165.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
randomness = 0.3
lifetime_randomness = 0.3
local_coords = false
texture = ExtResource( 2 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 0.83
damping = 10.0
damping_random = 1.0
damping_curve = SubResource( 4 )
angle = 93.7
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.01
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
